# imprint

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go  variables.go
info/: BUILD.bazel  defs.go  imprint.go  info.go  info_test.go
